@-Hot fix notify @-Add scrollbar for better view @-Fix wittdraw button layout

--- a/src/app/atoms/scroll/_scrollbar.scss
+++ b/src/app/atoms/scroll/_scrollbar.scss
@@ -1,6 +1,6 @@
 .firefox-scrollbar {
   scrollbar-width: thin;
-  scrollbar-color: var(--bg-surface-hover) transparent;
+  scrollbar-color: var(--bg-surface-low) transparent;
   &--transparent {
     scrollbar-color: transparent transparent;
   }
